<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin"
    android:orientation="vertical"
    android:background="@drawable/login">

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="258dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/texthint"
        android:textSize="24dp"
      />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/texthint"
        android:textSize="24dp"
       />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword"
        android:layout_marginStart="242dp"
        android:textColor="@color/yellow"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#B1D8B7"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_baseline_login_24"
        android:text="LOGIN"
       />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="132dp"
        android:text="Dont You Have an account ? "
        android:textColor="@color/black"
        android:layout_marginBottom="33dp"

        />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="162dp"
        android:text="or sign in with :"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:textSize="16dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginTop="10dp"

        >

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="100dp"
            android:layout_height="67dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/mailyy" />

        <ImageView
            android:id="@+id/img_goodle"
            android:layout_width="123dp"
            android:layout_height="72dp"
            android:layout_marginTop="10dp"

            android:src="@drawable/ic_google" />

        <ImageView
            android:id="@+id/img_facebook"
            android:layout_width="100dp"
            android:layout_height="67dp"
            android:layout_margin="0dp"
            android:src="@drawable/facebook" />

    </LinearLayout>


</LinearLayout>